[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/Fonts/markazi_text_48pt.tres" type="DynamicFont" id=1]
[ext_resource path="res://Themes/Fonts/markazi_text_42pt.tres" type="DynamicFont" id=2]
[ext_resource path="res://Themes/Fonts/markazi_text_36pt.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Credits/Credits.gd" type="Script" id=4]
[ext_resource path="res://Themes/Fonts/markazi_text_24pt.tres" type="DynamicFont" id=5]
[ext_resource path="res://Themes/HiddenScrollBar.tres" type="Theme" id=6]
[ext_resource path="res://Themes/Main.tres" type="Theme" id=7]
[ext_resource path="res://Themes/StyleBoxes/GraySquareStyleBox.tres" type="StyleBox" id=8]

[node name="Credits" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
h1_font = ExtResource( 1 )
h2_font = ExtResource( 1 )
h3_font = ExtResource( 2 )
h4_font = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer"]
margin_right = 1280.0
margin_bottom = 5372.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "





















[center]
[font=res://Themes/Fonts/markazi_text_48pt.tres]Collaborators[/font]
[font=res://Themes/Fonts/markazi_text_42pt.tres]Code[/font]
Author: [url=https://github.com/Maaack]Maaack[/url]  
Source: [url=https://github.com/Maaack/Battle-Deck-Energy]Github[/url]  
License: [url=./LICENSE.md]MIT License[/url]

[font=res://Themes/Fonts/markazi_text_48pt.tres]Art Assets[/font]
[font=res://Themes/Fonts/markazi_text_42pt.tres]Fonts[/font]
[font=res://Themes/Fonts/markazi_text_36pt.tres]Title[/font]
Author: [url=https://www.1001fonts.com/users/insanitype/]Insanitype[/url]  
Source: [url=https://www.1001fonts.com/kool-beans-font.html]1001Fonts[/url]  
License: [url=./Assets/Sourced/Fonts/kool-beans/koolbeans.txt]Freeware License[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Card Titles[/font]
Author: [url=https://www.1001fonts.com/users/steffmann/]Typographer Mediengestaltung[/url]  
Source: [url=https://www.1001fonts.com/morris-roman-font.html]1001Fonts[/url]  
License: [url=https://www.1001fonts.com/licenses/ffc.html]1001Fonts Free For Commercial Use License[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]UI Text[/font]
Author: [url=https://www.1001fonts.com/users/markazi-text-authors/]Markazi Text Authors[/url]  
Source: [url=https://www.1001fonts.com/markazi-text-font.html]1001Fonts[/url]  
License: [url=http://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL]SIL Open Font License (OFL)[/url]

[font=res://Themes/Fonts/markazi_text_42pt.tres]Audio[/font]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Menu, Battle, and Shelter Music[/font]
Author: [url=www.soundimage.org]Eric Matyas[/url]  
Source: [url=https://soundimage.org/wp-content/uploads/2020/06/Comrades-Always.mp3]Soundimage.org[/url]  
Source: [url=http://soundimage.org/wp-content/uploads/2016/07/Into-Battle_v001.mp3]Soundimage.org[/url]  
Source: [url=http://soundimage.org/wp-content/uploads/2014/07/RPG-Battle-Climax.mp3]Soundimage.org[/url]  
Source: [url=http://soundimage.org/wp-content/uploads/2016/04/Analog-Nostalgia.mp3]Soundimage.org[/url]   
License: [url=https://soundimage.org/attribution-info/]Attribution License[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Intro and Victory Music[/font]
Author: [url=https://fardifferent.itch.io/]Of Far Different Nature[/url]  
Source: [url=https://fardifferent.itch.io/loops]itch.io[/url]  
License: [url=https://creativecommons.org/licenses/by/4.0/]Attribution 4.0 International (CC BY 4.0)[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Card, Deck, and Shield Up Sounds[/font]
Author: [url=https://freesound.org/people/f4ngy/]f4ngy[/url]  
Source: [url=https://freesound.org/people/f4ngy/sounds/240776/]freesound.org[/url]  
Source: [url=https://freesound.org/people/f4ngy/sounds/240777/]freesound.org[/url]  
Source: [url=https://freesound.org/people/f4ngy/sounds/240778/]freesound.org[/url]  
Source: [url=https://freesound.org/people/f4ngy/sounds/240787/]freesound.org[/url]  
License: [url=http://creativecommons.org/licenses/by/3.0/]Attribution 3.0 Unported (CC BY 3.0)[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Fire Sounds[/font]
Author: [url=https://freesound.org/people/daenerys/]daenerys[/url]  
Source: [url=https://freesound.org/people/daenerys/sounds/260713/]freesound.org[/url]  
License: [url=http://creativecommons.org/licenses/by/3.0/]Attribution 3.0 Unported (CC BY 3.0)[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Slicing Flesh Sound[/font]
Author: [url=https://freesound.org/people/NeoSpica/]NeoSpica[/url]  
Source: [url=https://freesound.org/people/NeoSpica/sounds/504615/]freesound.org[/url]  
License: [url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0 Universal (CC0 1.0) Public Domain Dedication[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Shield Hit Sound[/font]
Author: [url=https://freesound.org/people/igorzets/]daenerys[/url]  
Source: [url=https://freesound.org/people/igorzets/sounds/333941/]freesound.org[/url]  
License: [url=http://creativecommons.org/licenses/by/3.0/]Attribution 3.0 Unported (CC BY 3.0)[/url]  

[font=res://Themes/Fonts/markazi_text_42pt.tres]Images[/font]
[font=res://Themes/Fonts/markazi_text_36pt.tres]Mountain Background Pack[/font]
Author: [url=http://ansimuz.com/site/]ansimuz[/url]  
Source: [url=https://opengameart.org/content/mountain-at-dusk-background]OpenGameArt.Org[/url]  
License: [url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0 Universal (CC0 1.0) Public Domain Dedication[/url]

[font=res://Themes/Fonts/markazi_text_42pt.tres]Icons[/font]
[font=res://Themes/Fonts/markazi_text_36pt.tres]Decks and Refresh Loop[/font]
Author: [url=http://wishforge.games/]Wishforge.Games[/url]  
Source: [url=https://wishforge.itch.io/3000-free-icons]itch.io[/url]  
License: [url=./Assets/Sourced/Icons/LineHeroUnlimited/License.txt]\"Standard License\"[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]Battle Effects[/font]
Author: [url=https://game-icons.net/about.html#authors]Lorc, Delapouite, and contributors[/url]  
Source: [url=https://thewristbandit.itch.io/boxes-be-gone]itch.io[/url]  
Original Source: [url=https://game-icons.net/]Game-icons.net[/url]  
License: [url=https://creativecommons.org/licenses/by/3.0/]Attribution 3.0 Unported (CC BY 3.0)[/url]  

[font=res://Themes/Fonts/markazi_text_36pt.tres]Banner Art[/font]
Author: [url=https://fontawesome.com/]Font Awesome[/url]  
Source: [url=https://fontawesome.com/]fontawesome.com[/url]  
License: [url=https://creativecommons.org/licenses/by/4.0/]Attribution 4.0 International (CC BY 4.0)[/url]  

[font=res://Themes/Fonts/markazi_text_42pt.tres]Programmer Art[/font]
Author: [url=https://github.com/Maaack]Maaack[/url]  
Source: [url=https://github.com/Maaack/Battle-Deck-Energy]Github[/url]  
License: [url=https://creativecommons.org/publicdomain/zero/1.0/]CC0 1.0 Universal (CC0 1.0)
Public Domain Dedication[/url]

[font=res://Themes/Fonts/markazi_text_48pt.tres]Development Tools[/font]
[font=res://Themes/Fonts/markazi_text_36pt.tres]Godot[/font]
Author: [url=https://godotengine.org/contact]Juan Linietsky, Ariel Manzur, and contributors[/url]  
Source: [url=https://godotengine.org/]godotengine.org[/url]  
License: [url=https://github.com/godotengine/godot/blob/master/LICENSE.txt]MIT License[/url] 

[font=res://Themes/Fonts/markazi_text_36pt.tres]Git[/font]
Author: [url=https://github.com/torvalds]Linus Torvalds[/url]  
Source: [url=https://git-scm.com/downloads]git-scm.com[/url]  
License: [url=https://opensource.org/licenses/GPL-2.0]GNU General Public License version 2[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]PyCharm[/font]
Author: [url=https://www.jetbrains.com/]Jet Brains[/url]  
Source: [url=https://www.jetbrains.com/pycharm/download/]jetbrains.com[/url]  
License: [url=https://www.jetbrains.com/]Copyright Â© 2000-2020 JetBrains s.r.o[/url]

[font=res://Themes/Fonts/markazi_text_36pt.tres]GIMP[/font]
Author: [url=https://www.gimp.org/about/authors.html]Spencer Kimball, Peter Mattis, and contributors[/url]  
Source: [url=https://www.gimp.org/downloads/]gimp.org[/url]  
License: [url=https://www.gimp.org/about/COPYING]GNU General Public License version 3[/url][/center]
























"
text = "






















Collaborators
Code
Author: Maaack  
Source: Github  
License: MIT License

Art Assets
Fonts
Title
Author: Insanitype  
Source: 1001Fonts  
License: Freeware License

Card Titles
Author: Typographer Mediengestaltung  
Source: 1001Fonts  
License: 1001Fonts Free For Commercial Use License

UI Text
Author: Markazi Text Authors  
Source: 1001Fonts  
License: SIL Open Font License (OFL)

Audio

Menu, Battle, and Shelter Music
Author: Eric Matyas  
Source: Soundimage.org  
Source: Soundimage.org  
Source: Soundimage.org  
Source: Soundimage.org   
License: Attribution License

Intro and Victory Music
Author: Of Far Different Nature  
Source: itch.io  
License: Attribution 4.0 International (CC BY 4.0)

Card, Deck, and Shield Up Sounds
Author: f4ngy  
Source: freesound.org  
Source: freesound.org  
Source: freesound.org  
Source: freesound.org  
License: Attribution 3.0 Unported (CC BY 3.0)

Fire Sounds
Author: daenerys  
Source: freesound.org  
License: Attribution 3.0 Unported (CC BY 3.0)

Slicing Flesh Sound
Author: NeoSpica  
Source: freesound.org  
License: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

Shield Hit Sound
Author: daenerys  
Source: freesound.org  
License: Attribution 3.0 Unported (CC BY 3.0)  

Images
Mountain Background Pack
Author: ansimuz  
Source: OpenGameArt.Org  
License: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication

Icons
Decks and Refresh Loop
Author: Wishforge.Games  
Source: itch.io  
License: \"Standard License\"

Battle Effects
Author: Lorc, Delapouite, and contributors  
Source: itch.io  
Original Source: Game-icons.net  
License: Attribution 3.0 Unported (CC BY 3.0)  

Banner Art
Author: Font Awesome  
Source: fontawesome.com  
License: Attribution 4.0 International (CC BY 4.0)  

Programmer Art
Author: Maaack  
Source: Github  
License: CC0 1.0 Universal (CC0 1.0)
Public Domain Dedication

Development Tools
Godot
Author: Juan Linietsky, Ariel Manzur, and contributors  
Source: godotengine.org  
License: MIT License 

Git
Author: Linus Torvalds  
Source: git-scm.com  
License: GNU General Public License version 2

PyCharm
Author: Jet Brains  
Source: jetbrains.com  
License: Copyright Â© 2000-2020 JetBrains s.r.o

GIMP
Author: Spencer Kimball, Peter Mattis, and contributors  
Source: gimp.org  
License: GNU General Public License version 3
























"
fit_content_height = true
scroll_active = false
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollResetTimer" type="Timer" parent="."]
one_shot = true

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -350.0
margin_top = -86.0
margin_right = -48.0
margin_bottom = -48.0
focus_mode = 0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="gui_input" from="ScrollContainer/RichTextLabel" to="." method="_on_RichTextLabel_gui_input"]
[connection signal="timeout" from="ScrollResetTimer" to="." method="_on_ScrollResetTimer_timeout"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
